test/corpus/assignments.txt
================================================================================
Assignments
================================================================================

EMPTY=
EMPTY =      
KEY_WITH_VALUE = value

--------------------------------------------------------------------------------

(document
 (assignment
  key: (identifier))
 (assignment
  key: (identifier))
 (assignment
  key: (identifier)
  value: (value)))
