test/corpus/comments.txt
================================================================================
Comments
================================================================================

# Comment

#
# Multi line comment.
#

EMPTY_WITH_COMMENT=# comment
EMPTY_WITH_COMMENT_WHITESPACE =      # comment

STRING_VALUE_WITH_COMMENT = 'string content'     # comment
STRING_VALUE_WITH_COMMENT = "string"     # comment
STRING_MULTIWORD_WITH_COMMENT = one   two   three      # comment
SINGLE_WORD_WITH_COMMENT = singleword     # comment

--------------------------------------------------------------------------------

(document
  (comment)
  (comment)
  (comment)
  (comment)
  (assignment 
    key: (identifier))
  (comment)
  (assignment 
   key: (identifier))
  (comment)
  (assignment 
   key: (identifier)
   value: (string
    (string_content)))
  (comment)
  (assignment 
   key: (identifier)
   value: (string
        (string_content)))
  (comment)
  (assignment 
   key: (identifier)
   value: (string
        (string_content)))
  (comment)
  (assignment 
   key: (identifier)
   value: (value))
  (comment))
